# Ollama-Chat

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  README_BADGE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
docs/: USAGE.md
examples/: chat_direct.py  fastapi_server.py  langchain_chat.py  run_chat.py  web_app.py
examples/static/: app.js  index.html  style.css
examples/templates/: index.html
scripts/: __init__.py  bootstrap.ps1  bootstrap.sh  check_env.py  check_langchain_imports.py  health_check.py  test_gpt_oss.py
src/langchain_ollama/: __init__.py  ollama_wrapper.py
tests/: conftest.py  test_extract_parser.py  test_fastapi_health.py  test_health_check.py  test_ollama_wrapper.py  test_wrapper.py
